Improved post functionality

--- a/client/my-social/src/components/Posts/Posts.css
+++ b/client/my-social/src/components/Posts/Posts.css
@@ -27,8 +27,16 @@
 }
 
 #post-input-box {
-    border: 1px solid black;
+    background-color: rgb(58, 167, 174);
     border-radius: 5%;
-    width: 60%;
-    height: 5%;
+}
+
+#post-input-box input {
+    margin: 3%;
+    padding: 1%;
+    width: 38%;
+}
+
+#post-input-row {
+    width: 90%;
 }
