--- a/client/my-social/src/components/Header/Header.css
+++ b/client/my-social/src/components/Header/Header.css
@@ -1,48 +1,38 @@
-#App-header {
-    width: 100%;
-    max-width: 100%;
-    padding: 0;
-    margin: 0 2% 0 0;
-    position: fixed;
-  }
-  
-  .header {
-    width: 100%;
-    display: inline-flex;
-    font-size: calc(10px + 2vmin);
-    background-color: rgb(255, 255, 255);
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    box-shadow: 10px 10px 5px lightgray;
-    padding: 0;
-    margin: 0;
-    height: 65px;
-  }
-  
-  .header p {
-    margin: 0;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+
+.header-left,
+.header-right {
+  display: flex;
+  align-items: center;
+}
+
+.header-title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 0;
+}
+
+.header-btn {
+  padding: 0.5rem 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  background-color: #2196F3; /* shade of blue */
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 1rem;
+  font-weight: 500;
+  transition: all 0.2s ease-in-out;
   }
 
-  #home-btn {
-    justify-self: start;
-    border: black 1px solid;
-    margin: 1%;
-  }
-
-  #home-btn-header {
-    justify-content: flex-start;
-  }
-
-  /* #main-header {
-
-  } */
-
-  #profile-btn {
-    border: black 1px solid;
-    margin: 6%;
-  }
-
-  #profile-btn-header {
-    justify-content: end;
-  }
+.header-btn:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.9);
+}
