--- a/client/my-social/src/components/Posts/Posts.css
+++ b/client/my-social/src/components/Posts/Posts.css
@@ -1,42 +1,49 @@
+/* Posts.css */
+
 .posts {
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
-
-#post {
-    display: inline-flex;
-    width: 85%;
-    /* height: 6%; */
-    /* border: red 1px solid; */
-    margin: 1.75%;
-    padding: 4%;
-    background-color: rgba(190, 190, 185, 0.823);
-    justify-content: space-evenly;
-    border-radius: 10%;
-    
-}
-
-.post-input-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    margin: 2rem 0;
+  }
+  
+  #post {
+    width: 30%;
+    padding: 2rem;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin: 1rem;
+  }
+  
+  .post-input-container {
+    background-color: #ffffff;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  input[type="text"] {
     width: 100%;
-    height: 100%;
-}
-
-#post-input-box {
-    background-color: rgb(58, 167, 174);
-    border-radius: 5%;
-}
-
-#post-input-box input {
-    margin: 3%;
-    padding: 1%;
-    width: 38%;
-}
-
-#post-input-row {
-    width: 90%;
-}
+    padding: 1rem;
+    border-radius: 5px;
+    border: 1px solid #d9d9d9;
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+  }
+  
+  button.btn {
+    background-color: #1e90ff;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    padding: 0.7rem 2rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+  
+  button.btn:hover {
+    background-color: #0077be;
+  }
+  
