--- a/client/my-social/src/components/Header/Header.css
+++ b/client/my-social/src/components/Header/Header.css
@@ -6,6 +6,7 @@
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
+  /* position: fixed; */
 }
 
 .header-left,
