--- a/client/my-social/src/App.css
+++ b/client/my-social/src/App.css
@@ -10,7 +10,7 @@
   flex-wrap: wrap;
   height: 100%;
   width: 100%;
-  /* background-color: rgba(229, 229, 229, 0.359); */
+  justify-content: center;
 }
 
 
