--- a/client/my-social/src/components/MakePost/MakePost.css
+++ b/client/my-social/src/components/MakePost/MakePost.css
@@ -1,6 +1,7 @@
 .post-input-container {
     background-color: #ffffff;
     padding: 2rem;
+    width: 70%;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
